		Block DnD while file chooser is active.
		Migrate OSX to OSX key accelerators.
		Fix for tcl code opening the root node.
		Fix time warp cmd->control mapping for OSX.
		Fix for time warped traces not rendering properly when
		x-coordinate overdraw is detected.
		Added WAVE_ALLOW_QUARTZ_FLUSH_WORKAROUND temporarily which
		needs to be set at compile time which gates redraw.
		Add GLOBALS->force_hide_show to force redraws in OSX.
		Added osx_timer() which controls forced redraw.
		Abort GHW read when nbr_el<0: indicates malformed file from
		variable/signal construct of form (7 to 0) rather than downto.
		Crash fix for non-string len zero facilities in vcd2fst.
		Fixed overflow in draw_hptr_trace_vector_analog().
		Added rtlbrowse and vcd2fst binary path finding code to OSX.
		Changed ps2pdf to pstopdf on Mac.
		Fixed broken wave_script_args.
		Reverted to 3.3.26 code in menu_func() as the renderbox
		requester did not work from TCL anymore.
		Catch NSApplicationOpenFile so files can be opened from Finder.
		Added --chdir command line option to support open for OSX so
		that gtkwave can be run at the command line directly from its
		installed gtkwave.app.
		Fix window resizing / repositioning to work in OSX: block once
		viewer is on second tab, however.
		Added sst_width, sst_vpaned_height, sst_expanded, and
		signals_width tags into save file to allow pane size and
		expander settings to be saved to the save file.
		Add ignore_savefile_pane_pos .gtkwaverc variable.
		Added dumpfile tag to save files.  OSX Finder uses these to
		find the original dumpfile.  This can be done from the command
		line also by specifying --save but not specifying a dump file.
		Added .gtkw as a new save file extension.  When either .sav
		or .gtkw is encountered, the rest of a tab's session adaptively
		follows in expecting it as the save file suffix.
		Added [savefile] tag to save files.  The intended use is to 
		allow reconstruction of relative paths between dump and save 
		file.
